fixed spacing on cards

--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -24,6 +24,7 @@
   &:hover{
     color: $green;
     text-decoration: underline !important;
+    cursor: pointer;
   }
 }
 i .btn-bookmark{
