--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -111,7 +111,7 @@
 display: flex;
 // flex-direction: column;
 justify-content: space-between;
-align-items: center;
+align-items: flex-start;
 padding: 18px;
 // position: relative;
 // bottom: 0;
@@ -137,6 +137,13 @@ padding: 18px;
   }
   &:hover {
     box-shadow: rgba(99, 99, 99, 0.4) 0px 2px 8px 0px;
+  }
+}
+.link-product{
+  color: $light-black;
+  padding-right: 6px;
+  &:hover {
+    color: $light-black;
   }
 }
 
